// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Name renders address with proposed name 1`] = `
<div>
  <div>
    <div
      class="name name__missing"
    >
      <span
        class="mm-box name__icon mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/warning.svg');"
      />
      <span
        class="name__value"
      >
        0xc0f...4978
      </span>
      <span
        class="name__proposed"
      >
        “
        TestProposedName
        ”
      </span>
    </div>
  </div>
</div>
`;

exports[`Name renders address with proposed name according to source priority 1`] = `
<div>
  <div>
    <div
      class="name name__missing"
    >
      <span
        class="mm-box name__icon mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/warning.svg');"
      />
      <span
        class="name__value"
      >
        0xc0f...4978
      </span>
      <span
        class="name__proposed"
      >
        “
        TestProposedName
        ”
      </span>
    </div>
  </div>
</div>
`;

exports[`Name renders address with saved name 1`] = `
<div>
  <div>
    <div
      class="name name__saved"
    >
      <span
        class="mm-box name__icon mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/save.svg');"
      />
      <span
        class="name__name"
      >
        TestName
      </span>
    </div>
  </div>
</div>
`;

exports[`Name renders address without proposed name 1`] = `
<div>
  <div>
    <div
      class="name name__missing"
    >
      <span
        class="mm-box name__icon mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/warning.svg');"
      />
      <span
        class="name__value"
      >
        0xc0f...4979
      </span>
    </div>
  </div>
</div>
`;
